First version of root of page: A brief how-to explanation of the API

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,19 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Welcome to Nodepop's guide</h1>
+    <ul>
+      <li>Anuncios</li>
+      <li><a href="#anuncios">GET /anuncios</a></li>
+      <li><a href="#anuncios/new">POST /anuncios/new</a></li>
+      <li><a href="#anuncios/update">PUT /anuncios/update</a></li>
+      <li><a href="#anuncios/delete">PUT /anuncios/delete</a></li>
+    </ul>
+    <ul>
+      <li>Usuarios</li>
+      <li><a href="#usuarios/new">POST /usuarios/new</a></li>
+      <li><a href="#usuarios/update">PUT /usuarios/update</a></li>
+      <li><a href="#usuarios/delete">PUT /usuarios/delete</a></li>
+    </ul>
   </body>
 </html>
